# OptiWay

./: .clang-format  .gitignore  README.md  TECHNICAL_NOTES.md
.github/workflows/: bundle.yml
assets/: paths.txt  paths.yaml  projection-coords-flatten.yaml  projection-coords.yaml  projection-length.yaml  shortest_paths.json  timetable_0.json  timetable_1.json  timetable_2.json  timetable_3.json  timetable_4.json  timetable_with_gt_0.json  timetable_with_gt_1.json  timetable_with_gt_2.json  timetable_with_gt_3.json  timetable_with_gt_4.json  timetable_with_p5_0.json  timetable_with_p5_1.json  timetable_with_p5_2.json  timetable_with_p5_3.json  timetable_with_p5_4.json
multi-agent-path-finding/: floyd.cpp
multi_agent_path_finding/: floyd.cpp  json.hpp  multi-objective-agent.cpp  out.app
optiway/: CMakeLists.txt  Cargo.toml  Makefile.toml  build.rs
optiway/assets/: paths.txt  projection-coords-flatten.yaml
optiway/include/: floyd.hpp  utilities.hpp
optiway/src/: app.rs  app_init.rs  ffi.rs  floyd.cpp  lib.rs  main.rs  multi-objective-agent.cpp  utilities.cpp
optiway/src/md_icons/: mod.rs
scripts/: coord-flatten.py  coord-generator.py  crossing-paths.py  path-converter.py  path-convertor.py  path-generator.py
timetable_generation/: return_structure.txt  timetable_generator.py
